2002-09-24  Derek Price  <derek@ximbiot.com>

	* options.h: Move definition of UMASK_DFLT into configure.in.

2002-09-24  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerated using Automake 1.6.3.

2002-09-24  Larry Jones  <lawrence.jones@eds.com>

	* filesubr.c, history.c, import.c, rcs.c, update.c: Use
	HAVE_STRUCT_STAT_ST_BLKSIZE and HAVE_STRUCT_STAT_ST_RDEV instead of
	the obsolete HAVE_ST_BLKSIZE and HAVE_ST_RDEV.

2002-09-24  Derek Price  <derek@ximbiot.com>

	* options.h: Move definition of TMPDIR_DFLT into configure.in.

2002-09-24  Derek Price  <derek@ximbiot.com>

	* options.h: Move defininition of EDITOR_DFLT into configure.in.

	* Makefile.in: Regenerated.

2002-09-23  Jim Meyering  <meyering@lucent.com>

	If `cvs -d REPO commit ...' was used to override CVS/Root,
	then modified files in the directory from which cvs is invoked
	would not be committed.
	* client.c (arg_should_not_be_sent_to_server): The above would happen
	because this function would throw out a file name when CVS/Root
	did not match the current server.  Fix by allowing the command-line-
	specified repository to take precedence over the value returned
	by Name_Root.  Patch by Simon Walton <simonw@lucent.com>.
	* sanity.sh (commit-d): New tests for the above.
	Patch by Simon Walton <simonw@lucent.com>.

2002-09-20  Derek Price  <derek@ximbiot.com>

	* options.h: Move definition of SERVER_FLOWCONTROL, SERVER_HI_WATER,
	and SERVER_LO_WATER into configure.in.

2002-09-20  Derek Price  <derek@ximbiot.com>

	* options.h: Move definition of PATCH_PROGRAM to configure.in.

2002-09-18  Larry Jones  <lawrence.jones@eds.com>

	* client.c (call_in_directory): Don't create admin directory when
	exporting into an existing directory.
	(Reported by Jens Engel <Jens.Engel@marconi.com>.)
	* sanity.sh (basic2): New tests for above.

2002-09-16  Jim Meyering  <meyering@lucent.com>

	* server.c (do_cvs_command): Move declarations of locals, timeout and