@@ -1,5 +1,9 @@
 2002-09-24  Derek Price  <derek@ximbiot.com>
 
+	* options.h: Move definition of FORCE_USE_EDITOR into configure.in.
+
+2002-09-24  Derek Price  <derek@ximbiot.com>
+
 	* options.h: Move definition of UMASK_DFLT into configure.in.
 
 2002-09-24  Derek Price  <derek@ximbiot.com>
